only 1 route at a time functionality

--- a/bike_path/index.html
+++ b/bike_path/index.html
@@ -32,18 +32,13 @@
           <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
         </p>
       <div id="slider" style="height:100px;"></div>
-      <!-- <div class = "col-sm-1">
-        <input id="Route" type="button" value="Calculate Route" />
-      </div> -->
       </div>
       <div class = "row">
         <div class = "col-sm-2">
-          <input class = "btn btn-primary" type = "submit" value = "New Route"/ disabled="disabled">
-          <!-- <input id="newRoute" type = "button" value= "New Route" /> -->
+          <input id = "calculate" class = "btn btn-success" type = "submit" value = "Calculate Route" disabled="disabled"/>
         </div>
         <div class = "col-sm-2">
-          <input class = "btn btn-success" type = "submit" value = "Calculate Route" disabled="disabled"/>
-          <!-- <input id="Route" type="button" value="Calculate Route" /> -->
+          <input id = "newRoute" class = "btn btn-danger" type = "submit" value = "New Route"/>
         </div>
 
       </div>
