disable functoinality toggle

--- a/bike_path/index.html
+++ b/bike_path/index.html
@@ -38,7 +38,7 @@
           <input id = "calculate" class = "btn btn-success" type = "submit" value = "Calculate Route" disabled="disabled"/>
         </div>
         <div class = "col-sm-2">
-          <input id = "newRoute" class = "btn btn-danger" type = "submit" value = "New Route"/>
+          <input id = "deleteRoute" class = "btn btn-danger" type = "submit" value = "Delete Route" disabled = "disabled"/>
         </div>
 
       </div>
