--- a/bike_path/index.html
+++ b/bike_path/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.1/leaflet.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.3/leaflet.draw.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/css/bootstrap-datetimepicker.min.css"/>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <script src="https://npmcdn.com/@turf/turf@3.5.1/turf.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.1/leaflet-src.js"></script>
@@ -47,15 +48,30 @@
           </div>
           <br/>
           <br/>
-          <div class=".checkbox-inline" id = "feautureCheckbox1">
-            <label><input type="checkbox" value="">Temperature</label>
+
+          <div class=".checkbox-inline">
+            <label><input id = "featureTemp" type="checkbox" value="" checked>Temperature</label>
           </div>
           <div class=".checkbox-inline">
-            <label><input type="checkbox" value="">Carbon Dioxide</label>
+            <label><input id = "featureCarbon" type="checkbox" value="" checked>Carbon Dioxide</label>
           </div>
           <div class=".checkbox-inline">
-            <label><input type="checkbox" value="">Nitrogen</label>
+            <label><input id = "featureNitrogen" type="checkbox" value="" checked>Nitrogen</label>
           </div>
+
+
+
+
+
+          <!-- <div class=".checkbox-inline" id = "featureTemp">
+            <label><input type="checkbox" value="" checked>Temperature</label>
+          </div>
+          <div class=".checkbox-inline">
+            <label><input type="checkbox" value="" checked>Carbon Dioxide</label>
+          </div>
+          <div class=".checkbox-inline">
+            <label><input type="checkbox" value="" checked>Nitrogen</label>
+          </div> -->
 
       </div>
       <br/>
